--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -70,10 +70,11 @@
         </button>
     </div>
 
-    <div class="retangulo-carrossel">
-        <h1 class="retangulo">Conheça nossa <strong>empresa!</strong></h1>
-    </div>
 
+
+        <div class="produtos">
+            <p>Conheça nossos <strong>produtos</strong></p>
+        </div>
     <!-- conteudo principal da pagina -->
 
     <main>
@@ -87,26 +88,47 @@
 
         <div class="conteiner">
             <h1 class="titulo"><strong>Nossa História</strong></h1>
-            <p class="texto">A Ferllu Floricultura foi fundada em Março de 2024. Mas, essa história teve início a mais
+            <p class="textoPC">A Ferllu Floricultura foi fundada em Março de 2024. Mas, essa história teve início a mais
                 tempo, onde juntamos a paixão pelo Cultivo de Orquídeas com uma forma de renda.</p>
 
-            <p class="texto">O cultivo de Orquídeas está presente na família Brandão há mais de uma década. Crescemos
+            <p class="textoMOBILE"> A Ferllu Floricultura foi fundada em Março de 2024. Mas, essa história teve início a
+                mais tempo, onde juntamos a paixão pelo Cultivo de Orquídeas com uma forma de renda.</p>
+
+            <p class="textoPC">O cultivo de Orquídeas está presente na família Brandão há mais de uma década. Crescemos
                 vendo
                 nossa mãe (Maria) cuidando dessa espécie de planta, e aos poucos fomos se encantando por esse universo
                 de
                 beleza e perfume.</p>
 
-            <p class="texto">No início de 2023 Andrea (uma das proprietárias) decidiu sair da CLT e abrir seu próprio
-                negócio. A ideia inicial era abrir uma floricultura no bairro, serviço que até então não existia…Quando
-                estava amadurecendo a ideia e colocando no papel, viu ma divulgação do Projeto Empreende Mulher no
+            <p class="textoMOBILE">
+                O cultivo de Orquídeas está presente na família Brandão há mais de uma década. Crescemos vendo nossa mãe
+                (Maria) cuidando dessa espécie de planta, e aos poucos fomos se encantando por esse universo de beleza e
+                perfume.</p>
+
+            <p class="textoPC">No início de 2023 Andrea (uma das proprietárias) decidiu sair da CLT e abrir seu próprio
+                negócio. A ideia inicial era abrir uma floricultura no bairro, serviço que até então não existia… Quando
+                estava amadurecendo a ideia e colocando no papel, encontrou uma divulgação do Projeto Empreende Mulher
+                no
                 Biopark
                 Educação e decidiu se inscrever. </p>
 
-            <p class="texto">Aprovada no processo de seleção, foram 6 meses de muito aprendizado, conhecimento e
+            <p class="textoMOBILE">
+                No início de 2023 Andrea (uma das proprietárias) decidiu sair da CLT e abrir seu próprio negócio. A
+                ideia inicial era abrir uma floricultura no bairro, serviço que até então não existia…Quando estava
+                amadurecendo a ideia e colocando no papel, viu uma divulgação do Projeto Empreende Mulher no Biopark
+                Educação e decidiu se inscrever. </p>
+
+            <p class="textoPC">Aprovada no processo de seleção, foram 6 meses de muito aprendizado, conhecimento e
                 crescimento. Criamos o nosso diferencial em serviços (Aluguel de Arranjos de Orquídeas Naturais) e em
                 meio a
                 estruturação do projeto, deixamos a Floricultura de lado e demos início a empresa Bella Fiore Orquídeas,
                 trabalhando de forma online com Venda, Aluguel e Consultoria.</p>
+
+            <p class="textoMOBILE">
+                Aprovada no processo de seleção, foram 6 meses de muito aprendizado, conhecimento e crescimento. Criamos
+                o nosso diferencial em serviços (Aluguel de Arranjos de Orquídeas Naturais) e em meio a estruturação do
+                projeto, deixamos a Floricultura de lado e demos início a empresa Bella Fiore Orquídeas, trabalhando de
+                forma online com Venda, Aluguel e Consultoria. </p>
         </div>
 
 
@@ -115,14 +137,21 @@
         <div class="conteiner">
             <h1 class="titulo"><strong>Objetivos e Valores</strong></h1>
 
-            <p class="texto">
+            <p class="textoMOBILE">
+                Eternizar momentos especiais com lindas opções de flores e presentes, que atendam as expectativas e
+                desejos dos nossos clientes.
+                Nossos valores estão pautados pela <strong>ética, respeito, confiabilidade, compromisso e
+                    resultados.</strong>
+                 </p>
+
+            <p class="textoPC">
 
                 Oferecemos uma variedade cuidadosamente selecionada de flores frescas e presentes, ideais para todas as
                 ocasiões. Seja um aniversário, casamento, formatura ou um gesto de carinho, nossos produtos são
                 escolhidos para tornar cada celebração única e inesquecível, trazendo alegria e emoção a quem os recebe.
             </p>
 
-            <p class="texto">
+            <p class="textoPC">
 
                 Operamos com transparência e integridade, tratamos todos com respeito e garantimos produtos de alta
                 qualidade. Nosso compromisso é com a satisfação total dos clientes, sempre buscando superar suas
@@ -130,7 +159,7 @@
             </p>
 
         </div>
-        
+
         <br> <br>
 
     </main>
