--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -72,9 +72,9 @@
 
 
 
-        <div class="produtos">
-            <p>Conheça nossos <strong>produtos</strong></p>
-        </div>
+    <div class="produtos">
+        <p>Conheça nossa <strong>empresa!</strong></p>
+    </div>
     <!-- conteudo principal da pagina -->
 
     <main>
@@ -87,12 +87,15 @@
         <img class="orquideas" src="img/orquideas.svg" alt="">
 
         <div class="conteiner">
+
             <h1 class="titulo"><strong>Nossa História</strong></h1>
+
             <p class="textoPC">A Ferllu Floricultura foi fundada em Março de 2024. Mas, essa história teve início a mais
                 tempo, onde juntamos a paixão pelo Cultivo de Orquídeas com uma forma de renda.</p>
 
-            <p class="textoMOBILE"> A Ferllu Floricultura foi fundada em Março de 2024. Mas, essa história teve início a
-                mais tempo, onde juntamos a paixão pelo Cultivo de Orquídeas com uma forma de renda.</p>
+            <p class="textoMOBILE">
+                A Ferllu Floricultura foi fundada em Março de 2024. Mas, essa história teve início a mais tempo, onde
+                juntamos a paixão pelo Cultivo de Orquídeas com uma forma de renda</p>
 
             <p class="textoPC">O cultivo de Orquídeas está presente na família Brandão há mais de uma década. Crescemos
                 vendo
@@ -101,6 +104,7 @@
                 beleza e perfume.</p>
 
             <p class="textoMOBILE">
+
                 O cultivo de Orquídeas está presente na família Brandão há mais de uma década. Crescemos vendo nossa mãe
                 (Maria) cuidando dessa espécie de planta, e aos poucos fomos se encantando por esse universo de beleza e
                 perfume.</p>
@@ -131,7 +135,6 @@
                 forma online com Venda, Aluguel e Consultoria. </p>
         </div>
 
-
         <br>
 
         <div class="conteiner">
@@ -147,7 +150,7 @@
             <p class="textoPC">
 
                 Oferecemos uma variedade cuidadosamente selecionada de flores frescas e presentes, ideais para todas as
-                ocasiões. Seja um aniversário, casamento, formatura ou um gesto de carinho, nossos produtos são
+                ocasiões. Nossos produtos são
                 escolhidos para tornar cada celebração única e inesquecível, trazendo alegria e emoção a quem os recebe.
             </p>
 
@@ -160,6 +163,19 @@
 
         </div>
 
+
+        <div class="secaoIMG">
+            <div class="linha">
+                <img src="img/orquidea01.png" alt="Imagem 1">
+                <img src="img/orquidea02.png" alt="Imagem 2">
+                <img src="img/orquidea01.png" alt="Imagem 3">
+            </div>
+            <div class="linha">
+                <img src="img/orquidea02.png" alt="Imagem 4">
+                <img src="img/orquidea01.png" alt="Imagem 5">
+                <img src="img/orquidea02.png" alt="Imagem 6">
+            </div>
+        </div>
         <br> <br>
 
     </main>
