--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -32,7 +32,7 @@
 
     <!-- menu de navegacao -->
 
-    <header>
+    <header class="header4">
         <nav class="navbar">
             <div class="container" style="margin: 0; max-width: 100vw;">
                 <img class="logo" src="img/Logo.png" alt="Logo da Ferllu floricultura">
@@ -79,25 +79,29 @@
 
     <main>
 
-
-
-
         <!-- icones de orquideas -->
 
         <img class="orquideas" src="img/orquideas.svg" alt="">
 
-        <div class="conteiner">
+
+        <section class="imagensPC">
+            <div class="linhaPC">
+                <img src="img/orquidea01.png" alt="Imagem 1">
+                <img src="img/orquidea02.png" alt="Imagem 2">
+                <img src="img/orquidea01.png" alt="Imagem 3">
+                <img src="img/orquidea01.png" alt="Imagem 1">
+                <img src="img/orquidea02.png" alt="Imagem 2">
+                <img src="img/orquidea01.png" alt="Imagem 3">
+            </div>
+
+        </section>
+
+        <section class="conteiner">
 
             <h1 class="titulo"><strong>Nossa História</strong></h1>
 
-            <p class="textoPC">A Ferllu Floricultura foi fundada em Março de 2024. Mas, essa história teve início a mais
-                tempo, onde juntamos a paixão pelo Cultivo de Orquídeas com uma forma de renda.</p>
-
-            <p class="textoMOBILE">
-                A Ferllu Floricultura foi fundada em Março de 2024. Mas, essa história teve início a mais tempo, onde
-                juntamos a paixão pelo Cultivo de Orquídeas com uma forma de renda</p>
-
-            <p class="textoPC">O cultivo de Orquídeas está presente na família Brandão há mais de uma década. Crescemos
+            <p class="textoPC">A Ferllu Floricultura foi fundada em Março de 2024. O cultivo de Orquídeas está presente
+                na família Brandão há mais de uma década. Crescemos
                 vendo
                 nossa mãe (Maria) cuidando dessa espécie de planta, e aos poucos fomos se encantando por esse universo
                 de
@@ -105,7 +109,8 @@
 
             <p class="textoMOBILE">
 
-                O cultivo de Orquídeas está presente na família Brandão há mais de uma década. Crescemos vendo nossa mãe
+                A Ferllu Floricultura foi fundada em Março de 2024. O cultivo de Orquídeas está presente na família
+                Brandão há mais de uma década. Crescemos vendo nossa mãe
                 (Maria) cuidando dessa espécie de planta, e aos poucos fomos se encantando por esse universo de beleza e
                 perfume.</p>
 
@@ -133,12 +138,25 @@
                 o nosso diferencial em serviços (Aluguel de Arranjos de Orquídeas Naturais) e em meio a estruturação do
                 projeto, deixamos a Floricultura de lado e demos início a empresa Bella Fiore Orquídeas, trabalhando de
                 forma online com Venda, Aluguel e Consultoria. </p>
-        </div>
+        </section>
 
-        <br>
+        <section class="imagensPC">
+            <div class="linhaPC">
+                <img src="img/orquidea01.png" alt="Imagem 1">
+                <img src="img/orquidea02.png" alt="Imagem 2">
+                <img src="img/orquidea01.png" alt="Imagem 3">
+                <img src="img/orquidea01.png" alt="Imagem 1">
+                <img src="img/orquidea02.png" alt="Imagem 2">
+                <img src="img/orquidea01.png" alt="Imagem 3">
+            </div>
 
-        <div class="conteiner">
-            <h1 class="titulo"><strong>Objetivos e Valores</strong></h1>
+        </section>
+
+        <br class="br400">
+
+
+        <section class="conteiner">
+            <h1 id="tituloObjetivos" class="titulo"><strong>Objetivos e Valores</strong></h1>
 
             <p class="textoMOBILE">
                 Eternizar momentos especiais com lindas opções de flores e presentes, que atendam as expectativas e
@@ -161,10 +179,22 @@
                 expectativas e criar impactos positivos e duradouros.
             </p>
 
-        </div>
+        </section>
+
+        <section class="imagensPC">
+            <div class="linhaPC">
+                <img src="img/orquidea01.png" alt="Imagem 1">
+                <img src="img/orquidea02.png" alt="Imagem 2">
+                <img src="img/orquidea01.png" alt="Imagem 3">
+                <img src="img/orquidea01.png" alt="Imagem 1">
+                <img src="img/orquidea02.png" alt="Imagem 2">
+                <img src="img/orquidea01.png" alt="Imagem 3">
+            </div>
+
+        </section>
 
 
-        <div class="secaoIMG">
+        <section class="secaoIMG">
             <div class="linha">
                 <img src="img/orquidea01.png" alt="Imagem 1">
                 <img src="img/orquidea02.png" alt="Imagem 2">
@@ -175,8 +205,8 @@
                 <img src="img/orquidea01.png" alt="Imagem 5">
                 <img src="img/orquidea02.png" alt="Imagem 6">
             </div>
-        </div>
-        <br> <br>
+        </section>
+        <br> 
 
     </main>
 
@@ -184,10 +214,10 @@
 
     <footer>
 
-        <div class="rodapeitens">
+        <section class="rodapeitens">
             <img class="logorodape" src="img/Logo-rodape.svg" alt="">
             <p class="textorodape">Avenida Senador Atílio Fontana, 2783 Panorama.</p>
-        </div>
+        </section>
         <img style="width: 100vw;" src="img/footer.svg" alt="">
 
     </footer>
