--- a/produtoSelecionado/site ferllu/nome.html
+++ b/produtoSelecionado/site ferllu/nome.html
@@ -41,7 +41,7 @@
     <main class="mainbar">
         <div class="main2">
             <div class="prod">
-                <img class="img" src="" alt="IMAGEM FLOR">
+                <img class="img" src="img/image.svg" alt="IMAGEM FLOR">
                 <div class="texto">
                 <h1 class="titulo"><strong>NOME</strong></h1>
                 <p class="text">Descrição do produto</p>
