--- a/Produtos/site ferllu/produtos.html
+++ b/Produtos/site ferllu/produtos.html
@@ -48,7 +48,7 @@
     </div>
         <section class="containerFiltro1">
             <a class="filtro" href="">Orquídeas</a>
-            <a class="filtro" href="">Buquês</a>
+            <a class="filtro" href="filtrobuque.html">Buquês</a>
             <a class="filtro" href="">Flores Naturais</a>
             <a class="filtro" href="">Canecas</a>
             <a class="filtro" href="">Chocolates</a>
