--- a/margarida.html
+++ b/margarida.html
@@ -20,7 +20,7 @@
 
     <!-- importacao dos arquivos css locais -->
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Produto-selecionado/style.css">
 
     <title>Ferllu</title>
 </head>
